--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <banner>
             <center>
-                <img src="C:\Users\Cassp\Downloads\My project-1.jpg" alt="image" height=" 250" width="900">
+                <img src="My project-1.jpg" alt="image" height=" 250" width="900">
             </center>
         </banner>
     </body>
