--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
                 alt="image" height=" 250" width="300">
         </banner>
     </body>
+        <h2 style="font-family:Verdana;color: #191744;">Class Assignments</h2>
+        <li style="font-size:23;font-family:Verdana;color: #422967;"><a href="Assign2/assignment2.htm>see assignment2">Assignment 2</a></li>
 
     </html>
     <hr>
