--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
         </banner>
     </body>
         <h2 style="font-family:Verdana;color: #191744;">Class Assignments</h2>
-        <li style="font-size:23;font-family:Verdana;color: #422967;"><a href="../assignment2.html">Assignment 2</a></li>
+        <li style="font-size:23;font-family:Verdana;color: #422967;"><a href="../assignment2.html/assignment2.html"> Assignment2 </a></style></a></li>
+        <li style="font-size:23;font-family:Verdana;color: #422967;"><a href="../assignment3/assignment3.html"> Assignment 3 </a></style></li>
 
     </html>
     <hr>
